Vehicle images update flow added, And remove vechile softdelte added
